# mordor2

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  a.out  config.cxx  config.h  log.cpp  log.cxx  log.h  log_base.h  noncopyable.h  sample.cxx  timestamp.cxx  timestamp.h
examples/: example.cxx
include/: config.h  log.h  noncopyable.h  timestamp.h
src/: config.cxx  log.cxx  timestamp.cxx
